config-root/cluster/constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedZones
metadata:
  name: belgium-locality
spec:
  match:
    kinds:
      - apiGroups: ["storage.k8s.io"]
        kinds: ["StorageClass"]
  parameters:
    zones:
      - europe-west1-c
      - europe-west1-d
  enforcementAction: dryrun
